# CovFuzz_4G_5G_Fuzzing

./: .gitignore  Dockerfile  README.md  build_script.sh  generate_srsran_config.py
LTE_5G_FUZZER/: CMakeLists.txt  cov_feedback_fuzz_script.sh  generate_fuzz_strategy_config.py  no_cov_feedback_fuzz_script.sh
LTE_5G_FUZZER/configs/Fuzzing_Settings/: srsran_config.json
LTE_5G_FUZZER/exploit/Crash_in_most_5G_modems/: Crash_seed_1.json
LTE_5G_FUZZER/include/: helpers.h
LTE_5G_FUZZER/include/Fuzzers/: base_fuzzer.h
LTE_5G_FUZZER/include/Protocol_Stack/: Protocol_type.h  protocol_stack_names.h
LTE_5G_FUZZER/paper_coverage_log/dl_no_cov_k_0.25/: coverage_statistics_2024-10-09_17:24:03  coverage_statistics_2024-10-09_18:15:42  coverage_statistics_2024-10-09_19:06:14  coverage_statistics_2024-10-09_19:57:29  coverage_statistics_2024-10-09_20:48:58  coverage_statistics_2024-10-09_21:41:21  coverage_statistics_2024-10-09_22:33:48  coverage_statistics_2024-10-09_23:25:10  coverage_statistics_2024-10-10_00:16:03  coverage_statistics_2024-10-10_01:07:12  (+10 more)
LTE_5G_FUZZER/replay_seeds/: example_dl_seed.json  injection_example.json
LTE_5G_FUZZER/src/: helpers.cpp
LTE_5G_FUZZER/visualize_scripts/: run_all_visualize_scripts.sh
common/shm/: CMakeLists.txt  client.cpp  common_utils.h  config.json  fuzz_config.cpp  fuzz_config.h  server.cpp  shared_memory.cpp  shared_memory.h  shm_helper.cpp  shm_helper.h
helper_scripts/: count_the_number_of_mutations_in_logs.py  count_the_number_of_states_in_logs.py  coverage_dir_visualizer.py  coverage_dir_visualizer_by_time.py
(+1238 files in other folders)
